# clofy-be

./: .basedpyrightconfig.json  .gitignore  main.py  pyproject.toml  tasks.py
app/core/: docs.py
clofy-be/: .pre-commit-config.yaml  main.py  pyproject.toml
static/: swagger_ui_dark.css
